force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/Dan360_DocumentosCuentaCorriente__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacenará los documentos de cuenta corriente que se relacionan a las cuentas.</description>
    <label>Documento de Cuenta Corriente</label>
    <nameField>
        <label>Nombre de Documentos de Cuenta Corriente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos de Cuenta Corriente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>