force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Acumulado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Acumulado__c</fullName>
    <label>Acumulado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>