force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Documentos_de_Cuenta_Corriente</relationshipName>
    <type>Lookup</type>
</CustomField>