force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_CorreoDeCliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CorreoDeCliente__c</fullName>
    <description>Campo que guarda el correo del usuario relacionado al cliente</description>
    <label>Correo de Cliente</label>
    <type>Email</type>
</CustomField>