force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_DiasDeVencido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DiasDeVencido__c</fullName>
    <formula>IF(
Dan360_Vencimiento__c &lt; today(),
TODAY() - Dan360_Vencimiento__c, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de vencido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>