force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Factura__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Dan360_Factura__c</referenceTo>
    <relationshipName>Documentos_de_Cuenta_Corriente</relationshipName>
    <type>Lookup</type>
</CustomField>