force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_FechaDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaDocumento__c</fullName>
    <label>Fecha de documento</label>
    <type>Date</type>
</CustomField>