force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_ImporteDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteDocumento__c</fullName>
    <label>Importe Documento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>