force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_NroComprobante__c.field-meta.xml
<CustomField>
    <fullName>Dan360_NroComprobante__c</fullName>
    <label>Nro de Comprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>