force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Documentos_de_Cuenta_Corriente</relationshipName>
    <type>Lookup</type>
</CustomField>