force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Saldo__c</fullName>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>