force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Documentos_de_Cuenta_Corriente1</relationshipName>
    <type>Lookup</type>
</CustomField>