force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_TipoDeDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_TipoDeDocumento__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCNUA</fullName>
            </value>
            <value>
                <fullName>FCNUB</fullName>
            </value>
            <value>
                <fullName>FCNUE</fullName>
            </value>
            <value>
                <fullName>NCNUA</fullName>
            </value>
            <value>
                <fullName>NCNUB</fullName>
            </value>
            <value>
                <fullName>NCNUE</fullName>
            </value>
            <value>
                <fullName>NDNUA</fullName>
            </value>
            <value>
                <fullName>NDNUB</fullName>
            </value>
            <value>
                <fullName>NDNUE</fullName>
            </value>
            <value>
                <fullName>FCNUAC</fullName>
            </value>
            <value>
                <fullName>FCNUBC</fullName>
            </value>
            <value>
                <fullName>NCNUAC</fullName>
            </value>
            <value>
                <fullName>NCNUBC</fullName>
            </value>
            <value>
                <fullName>NDNUAC</fullName>
            </value>
            <value>
                <fullName>NDNUBC</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>