force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Dan360_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Vencimiento__c</fullName>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>