force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/FECHA_TEST__c.field-meta.xml
<CustomField>
    <fullName>FECHA_TEST__c</fullName>
    <label>FECHA TEST</label>
    <type>DateTime</type>
</CustomField>