force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/ID_Registro__c.field-meta.xml
<CustomField>
    <fullName>ID_Registro__c</fullName>
    <description>Campo usado para validar registros duplicados.</description>
    <label>ID Registro</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>