force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <length>16</length>
    <type>Text</type>
</CustomField>