force-app/main/default/objects/Dan360_DocumentosCuentaCorriente__c/fields/Unidad_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Negocio__c</fullName>
    <label>Unidad de Negocio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>